# hanz.jsmx.org

./: .dockerignore  .env.example  .env.prod  .gitignore  .miserc.toml  CHANGELOG.md  Dockerfile  Makefile  composer.json  justfile  mise.development.toml  mise.production.toml  mise.toml  pyproject.toml  requirements.txt
app/Models/: User.php
app/Providers/: AppServiceProvider.php
apps/core/: models.py
apps/pages/: models.py
apps/pages/migrations/: 0007_alter_portfolioshowcaseitem_options_and_more.py
bootstrap/: app.php
config/: settings.py
config/settings/: base.py  prod.py
config/statamic/: eloquent-driver.php  system.php
database/migrations/: 0001_01_01_000000_create_users_table.php  2025_04_09_204704_statamic_auth_tables.php
dev/: docker-compose.dev.yml
frontend/: pnpm-lock.yaml
frontend/src/css/: styles.css
prod/freebsd/: README.md  wagtail-bench.js
prod/freebsd/litestream/: litestream.yml
prod/freebsd/nginx/: nginx.conf  wagtail.conf  wagtail.conf.2
prod/freebsd/rc.d/: litestream  wagtail
prod/freebsd/scripts/: deploy.sh  setup-cron.sh  start.sh  tune.sh
resources/views/: home.antlers.html  layout.antlers.html
resources/views/errors/: 404.antlers.html
templates/: base.html
templates/includes/: footer.html
templates/pages/: resource_showcase_page.html  showcase_page.html
users/: hanz@jsmx.org.yaml
