[project]
name = "wagtail-starter-kit"
version = "0.2.2"
description = "A modern, flexible Wagtail starter kit for marketing websites"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.35.0",
  "django>=5.2,<5.3",
  "django-actioncable>=1.0.4",
  "django-environ>=0.12.0",
  "django-redis>=5.4.0",
  "django-storages>=1.14.0",
  "django-turbo-helper>=2.1.4",
  "django-vite>=3.1.0",
  "granian==2.6.0",
  "pillow>=10.4.0",
  "python-webpack-boilerplate>=1.0.4",
  "uuid6>=2025.0.1",
  "wagtail>=7.0,<7.1",
  "wagtail-cache>=3.0.0",
  "wagtail-flexible-forms>=2.1.0",
  "wagtail-seo>=3.1.0",
  "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
  "black>=24.4.0",
  "isort>=5.13.0",
  "pre-commit>=4.2.0",
  "pytest>=8.3.0",
  "pytest-django>=4.8.0",
  "ruff>=0.6.0",
]
